// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sample block 1`] = `
Array [
  <h1 />,
  <h2 />,
  <h3 />,
  <p />,
  <ul>
    <li />
    <li />
    <li />
  </ul>,
]
`;

exports[`nl2br 1`] = `
Array [
  <p />,
  .emotion-0 {
  margin-bottom: 2rem;
}

<div
    className="emotion-0"
  >
    <pre
      style={
        Object {
          "MozHyphens": "none",
          "MozTabSize": "4",
          "OTabSize": "4",
          "WebkitHyphens": "none",
          "background": "#2d2d2d",
          "color": "#ccc",
          "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
          "hyphens": "none",
          "lineHeight": "1.5",
          "margin": ".5em 0",
          "msHyphens": "none",
          "overflow": "auto",
          "padding": "1em",
          "tabSize": "4",
          "textAlign": "left",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        }
      }
    >
      <code
        style={
          Object {
            "MozHyphens": "none",
            "MozTabSize": "4",
            "OTabSize": "4",
            "WebkitHyphens": "none",
            "background": "none",
            "color": "#ccc",
            "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
            "hyphens": "none",
            "lineHeight": "1.5",
            "msHyphens": "none",
            "tabSize": "4",
            "textAlign": "left",
            "whiteSpace": "pre",
            "wordBreak": "normal",
            "wordSpacing": "normal",
            "wordWrap": "normal",
          }
        }
      >
        a
b
c
“\`\`\`
      </code>
    </pre>
  </div>,
]
`;

exports[`nl2br-link 1`] = `
<p>
  <a
    href="http://example.com"
  />
</p>
`;

exports[`web-component 1`] = `
<p>
  <x-some-item />
</p>
`;
